objects/disco__Form_Generation_Job__c.object
<CustomObject>
    <description>Holds the information to create forms for a Template on a re-occurring schedule</description>
    <fields>
        <fullName>disco__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Advanced_Query_Logic__c</fullName>
        <description>free form query for filtering</description>
        <inlineHelpText>free form query for filtering</inlineHelpText>
        <label>Advanced Query Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Advanced_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables advanced query option rather than simple query</description>
        <inlineHelpText>When checked, enables advanced query option rather than simple query</inlineHelpText>
        <label>Advanced Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Assignment_Criteria__c</fullName>
        <description>Object field name for Object Field option, User Id for User option</description>
        <inlineHelpText>Object field name for Object Field option, User Id for User option</inlineHelpText>
        <label>Assignment Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Object Field</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Me</fullName>
                    <isActive>false</isActive>
                    <label>Me</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Days_Interval__c</fullName>
        <description>Every n days</description>
        <inlineHelpText>Every n days</inlineHelpText>
        <label>Days Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__End_Date__c</fullName>
        <description>Day after which forms should no longer be generated</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>disco__Error_on_Last_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the last run the generate forms encountered error(s)</description>
        <label>Error on Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <description>Related Template</description>
        <inlineHelpText>Related Template</inlineHelpText>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipName>Form_Gen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>disco__Frequency__c</fullName>
        <description>Schedule type for how often the forms should be generated</description>
        <inlineHelpText>Schedule type for how often the forms should be generated</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days Interval</fullName>
                    <default>true</default>
                    <label>Days Interval</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Last_Run_Completed__c</fullName>
        <description>Date/Time when last forms generation run finished</description>
        <inlineHelpText>Date/Time when last forms generation run finished</inlineHelpText>
        <label>Last Run Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Last_Run_Error__c</fullName>
        <description>Error(s) encountered during the last run</description>
        <inlineHelpText>Error(s) encountered during the last run</inlineHelpText>
        <label>Last Run Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Last_Run_Started__c</fullName>
        <description>Date/TIme last form generation run was started</description>
        <inlineHelpText>Date/TIme last form generation run was started</inlineHelpText>
        <label>Last Run Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Object__c</fullName>
        <description>API Name of primary Object</description>
        <inlineHelpText>API Name of primary Object</inlineHelpText>
        <label>Primary Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Primary_Relationship__c</fullName>
        <description>Relationship field name on form linked to the primary object</description>
        <inlineHelpText>Relationship field name on form linked to the primary object</inlineHelpText>
        <label>Primary Relationship</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Schedule_Status__c</fullName>
        <formula>If ( disco__Active__c  &lt;&gt;  true,&apos;Inactive&apos;, 
    IF (  NOT(ISPICKVAL(disco__Form_Template__r.disco__Status__c,&apos;In Use&apos;)),&apos;Template not published&apos;,
		IF(disco__Start_Date__c &gt; TODAY(),&apos;Future&apos;,
	IF(disco__End_Date__c &lt; TODAY() || disco__Start_Date__c  = NULL || ISPICKVAL(disco__Frequency__c,&apos;Once&apos;) ,&apos;Past&apos;,
				IF(disco__End_Date__c &gt; TODAY() &amp;&amp; disco__Start_Date__c &lt;= TODAY(), &apos;Current&apos;, null)
			)
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Seconday_Relationships_Map__c</fullName>
        <description>JSON map of secondary relationships</description>
        <inlineHelpText>JSON map of secondary relationships</inlineHelpText>
        <label>Seconday Relationships Map</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Simple_Filter_Logic_Conditions__c</fullName>
        <description>Filer Logic expressed in JSON for simple queries</description>
        <inlineHelpText>Filer Logic expressed in JSON for simple queries</inlineHelpText>
        <label>Simple Filter Logic_Conditions</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Simple_Filter_Logic_Operation__c</fullName>
        <description>eg (1 AND 2) or 3</description>
        <inlineHelpText>eg (1 AND 2) or 3</inlineHelpText>
        <label>Simple Filter Logic Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Start_Date__c</fullName>
        <description>Date that automatic form generation should start</description>
        <inlineHelpText>Date that automatic form generation should start</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Form Generation Job</label>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>disco__Primary_Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>disco__Frequency__c</columns>
        <columns>disco__Schedule_Status__c</columns>
        <columns>disco__Start_Date__c</columns>
        <columns>disco__End_Date__c</columns>
        <columns>disco__Assignment_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Gen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Generation Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>